Phase 5: Cleanup and polish
- Remove HelloWorld.vue placeholder component
- Replace hardcoded CORS origins with environment variable
- Add cors.allowed-origins configuration (defaults: localhost:5173,localhost:3000)
- Improve production deployment flexibility